--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "DKSportsbookClient"
-version = "0.1-alpha"
+version = "1.0"
 license = { file = "LICENSE.md" }
 dynamic = ["dependencies"]
 
